--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -22,7 +22,7 @@ endif()
 add_subdirectory(net)
 list(APPEND LIBS net)
 add_library(io STATIC ${SOURCES})
-target_compile_definitions(io PUBLIC ${COMPILE_DEFINITIONS})
+target_compile_definitions(io PRIVATE ${COMPILE_DEFINITIONS})
 target_compile_options(io PRIVATE ${CSICS_COMPILE_FLAGS})
 target_link_options(io PRIVATE ${CSICS_LINKER_FLAGS})
 message(DEBUG "IO module sources: ${SOURCES}")
