--- a/src/serialization/CMakeLists.txt
+++ b/src/serialization/CMakeLists.txt
@@ -6,12 +6,12 @@ set(SOURCES
 set(LIBS)
 
 set(INCLUDES
-    ${INCLUDE_DIR}
 )
 
 add_library(serialization ${SOURCES})
 target_link_libraries(serialization ${LIBS})
-target_include_directories(serialization PUBLIC ${INCLUDES})
+target_include_directories(serialization PRIVATE ${INCLUDES} PUBLIC ${INCLUDE_DIR})
 target_compile_options(serialization PRIVATE ${CSICS_COMPILE_FLAGS})
 target_link_options(serialization PRIVATE ${CSICS_LINKER_FLAGS})
+target_compile_definitions(serialization PRIVATE ${CSICS_COMPILE_DEFINITIONS})
 
